Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108019

QSGTexture::nativeInterface() doesn't work for QSGMetalTexture

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.1, 6.8.0 FF
    • 6.4.0
    • Quick: SceneGraph
    • None
    • macOS
    • 18c2e2512 (dev), 7a29fa8ba (6.7), 983bc7033 (6.6)

    Description

      QSGTexture::nativeInterface<QNativeInterface::QSGMetalTexture>() always returns null because the relevant branch is never compiled due to the OBJC flag which is never defined in a CPP file.

      https://github.com/qt/qtdeclarative/blob/dev/src/quick/scenegraph/coreapi/qsgtexture.cpp#L977-L979

      #if defined(_OBJC_)
      QT_NATIVE_INTERFACE_RETURN_IF(QSGMetalTexture, &dd->m_metalTextureAccessor);
      #endif

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lagocs Laszlo Agocs
              muratseker Murat Seker
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews