Make the QSGTexture native accessor query work on macOS/iOS

Also add an autotest.

Pick-to: 6.6 6.5
Fixes: QTBUG-108019
Change-Id: Ie809041019b0a1b842791994e42d9d75578eb350
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 18c2e2512b1256677ec09f8ac469f34ed30ce2f8)
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>